# physicalai-av-dataloader

./: .gitignore  README.md
dataloader/: colorize_lidar.py  download_egomotion.py  export_camera.py  export_lidar.py  pyproject.toml  stream_lidar.py
dataloader/.claude/: settings.local.json
frontend/: package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/public/: egomotion.json
